[gd_scene load_steps=8 format=3 uid="uid://dw8c21uqaqyq7"]

[ext_resource type="Script" path="res://escenas/enemy_scene/enemy.gd" id="1_plqv8"]
[ext_resource type="Texture2D" uid="uid://ddt1jackkrpxd" path="res://assets/monochrome_tilemap_transparent.png" id="2_8nwwl"]
[ext_resource type="AudioStream" uid="uid://4ruymikqtssr" path="res://assets/sound/sfx/enemy_damage.wav" id="3_mchaf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6fq2j"]
atlas = ExtResource("2_8nwwl")
region = Rect2(0, 323, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijdna"]
atlas = ExtResource("2_8nwwl")
region = Rect2(17, 323, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7uftj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fq2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijdna")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4fsg"]
size = Vector2(8, 10)

[node name="Enemy" type="Node2D"]
z_index = 2
script = ExtResource("1_plqv8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7uftj")
autoplay = "default"
frame_progress = 0.502565

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_e4fsg")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mchaf")
volume_db = -15.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
